--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
